@@ -2,6 +2,9 @@ v2.6.5.5 - Added a green bar display for frame caches in the timeline for
 	   both movies and sequences.
 	 - Bug fixed a hanging problem when exiting while playing backwards
 	   movie with audio.
+	 - Bug fixed a cache problem not caching the first frame when playing 
+	   backwards.
+	 - Changed Release folder to mrViewer-v$VERSION folder.
 v2.6.5.4 - Bug fixed some problems with loop playback of movie files in EDL.  
 	   Still not perfect.  There are still sync problems after 
 	   several loops specially with ping-pong (swing)
